Put nav links inside <li>

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,3 +1,2 @@
-<%= link_to 'API call', site_stats_path %>
-&nbsp;|&nbsp;
-<%= link_to 'Send Email', messages_path %>
+<li><%= link_to 'API call', site_stats_path %></li>
+<li><%= link_to 'Send Email', messages_path %></li>
